Refactored MySQLExtractor class